--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,6 +11,24 @@
 		License.
 -->
 <resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
+    <string name="geoodk_mainTitle">Data Collection &amp; Mapping</string>
+    <string name="menu_collect_data">Collect Data</string>
+    <string name="menu_collect_data_description">Complete a new survey</string>
+    <string name="menu_edit_data">Edit Data</string>
+    <string name="menu_edit_data_description">Edit an existing survey</string>
+    <string name="menu_send_data">Send Data</string>
+    <string name="menu_send_data_description">Send completed forms</string>
+    <string name="menu_delete_data">Delete Data</string>
+    <string name="menu_delete_data_description">Remove complete and blank forms</string>
+    <string name="menu_settings">Settings</string>
+    <string name="menu_settings_description">Configure forms, maps and others</string>
+    <string name="menu_about_geoodk">About GeoODK</string>
+    <string name="menu_about_geoodk_description">Learn more about GeoODK</string>
+    <string name="menu_map_data">Map Data</string>
+    <string name="menu_setting_form">Form Management</string>
+    <string name="menu_setting_general">General Settings</string>
+    <string name="menu_setting_admin">Admin Settings</string>
+    <string name="menu_setting_theme">Map/Theme Settings</string>
 
     <string name="accept_location">Record Location</string>
     <string name="accuracy">Accuracy</string>
@@ -360,7 +378,6 @@
     <string name="change_oflinelayers_url">Change Offline Layer Location</string>
     <string name="record_geoshape">Record GeoShape</string>
     <string name="title_activity_geo_shape">GeoShapeActivity</string>
-    <string name="geoodk_mainTitle">Data Collection &amp; Mapping</string>
     <string name="title_activity_geo_trace">GeoTraceActivity</string>
     <string name="view_shape">Edit Shape</string>
     <string name="record_trace">Record GeoTrace</string>
